syntax = "proto3";

package com.penumbraos.ipc.proxy;

// For identifying requests across the TCP boundary
message RequestOrigin {
  string id = 1; // This will be 'requestId' for HTTP, 'clientWsId' for WebSockets
}

message HttpHeader {
  string key = 1;
  string value = 2;
}

// --- From FriendlyAPIService (Kotlin) to NetworkProxyProcess (Rust) ---
message ClientToServerMessage {
  RequestOrigin origin = 1;
  oneof payload {
    HttpProxyRequest http_request = 2;
    WebSocketOpenProxyRequest ws_open_request = 3;
    WebSocketProxyMessage ws_message_to_server = 4;
    WebSocketCloseProxyRequest ws_close_request = 5;
  }
}

message HttpProxyRequest {
  string url = 1;
  string method = 2; // "GET", "POST", etc.
  repeated HttpHeader headers = 3;
  bytes body = 4;
}

// --- From NetworkProxyProcess (Rust) to FriendlyAPIService (Kotlin) ---
message ServerToClientMessage {
  RequestOrigin origin = 1;
  oneof payload {
    HttpResponseHeaders http_headers = 2;
    HttpResponseBodyChunk http_body_chunk = 3;
    HttpResponseComplete http_response_complete = 4;
    HttpRequestError http_error = 5;
    WebSocketOpenedResponse ws_opened = 6;
    WebSocketProxyMessage ws_message_from_server = 7;
    WebSocketClosedFromServer ws_closed_from_server = 8;
    WebSocketError ws_error = 9;
  }
}

message HttpResponseHeaders {
  int32 status_code = 1;
  repeated HttpHeader headers = 2;
}

message HttpResponseBodyChunk {
  bytes chunk = 1;
}

message HttpResponseComplete {}

message HttpRequestError {
  string error_message = 1;
  int32 error_code = 2;
}

message WebSocketOpenProxyRequest {
  string url = 1;
  repeated HttpHeader headers = 2;
}

enum WebSocketMessageType {
  TEXT = 0;
  BINARY = 1;
}

message WebSocketProxyMessage {
  WebSocketMessageType type = 1;
  bytes data = 2;
}

message WebSocketCloseProxyRequest {
  int32 code = 1;
  string reason = 2;
}

message WebSocketOpenedResponse {
  repeated HttpHeader headers = 1;
}

message WebSocketClosedFromServer {
  int32 code = 1;
  string reason = 2;
}

message WebSocketError {
  string error_message = 1;
}